# drf-auth

./: db.sqlite3  docker-compose.yml  heroku.yml  pyproject.toml  requirements.txt
blog/: models.py  permissions.py  serializer.py  serializers.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog_project/: .env  settings.py  urls.py
